[project]
name = "mlx-openai-server"
description = "A high-performance API server that provides OpenAI-compatible endpoints for MLX models."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
dynamic = ["version"]
authors = [{ name = "Gia-Huy Vuong", email = "cubist38@gmail.com" }]
keywords = [
  "mlx",
  "fastapi",
  "openai",
  "server",
  "api",
  "multimodal",
  "local models",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "aiofiles>=24.1,<26",
  "av>=15.1,<18",
  "click>=8.2.1,<8.4",
  "fastapi>=0.115.14,<0.130",
  "httpx>=0.28,<1",
  "json_repair>=0.52.1,<0.60",
  "librosa>=0.10.2.post1,<0.13",
  "mflux>=0.15.4,<0.16",
  "loguru>=0.7.3,<0.8",
  "mlx-embeddings>=0.0.5,<0.1",
  "mlx-lm>=0.25.3,<0.31",
  "mlx-vlm>=0.3.0,<0.4",
  "mlx-whisper>=0.4.3,<0.5",
  "mlx>=0.30",
  "numpy>=2.1.3,<3.0",
  "openai-harmony>=0.0.8,<0.1",
  "outlines>=0.1.14,<0.2",
  "pillow>=10.4.0,<13.0",
  "pydantic>=2,<3",
  "python-multipart>=0.0.20,<0.0.25",
  "rich>=14,<15",
  "torchvision>=0.23.0,<0.30",
  "uvicorn>=0.35.0,<0.41",
]

[dependency-groups]
dev = [
  "codespell",
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
  "types-aiofiles",
  "types-cffi",
  "types-PyMySQL",
  "types-pyRFC3339",
  "types-python-dateutil",
  "types-PyYAML",
  "types-regex",
  "types-requests",
  "types-setuptools",
]
enhanced-caching = ["spacy", "regex", "tiktoken", "torch", "transformers"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "app.version.__version__" }

[project.urls]
Homepage = "https://github.com/cubist38/mlx-openai-server"

[project.scripts]
mlx-openai-server = "app.cli:cli"

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
prerelease = "allow"

[tool.codespell]
skip = "*.py,*.toml,*.ipynb"
quiet-level = 3

[tool.pytest.ini_options]
addopts = "--tb=short"
markers = [
  "integration: marks tests as integration tests that require external services",
]

[tool.ruff]
line-length = 100
indent-width = 4
fix = true
force-exclude = true
required-version = ">=0.12.0"
exclude = ["examples/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "A001",
  "ANN001",
  "ANN003",
  "ANN201",
  "ANN202",
  "ANN204",
  "ANN206",
  "ASYNC210",
  "ASYNC220",
  "ASYNC221",
  "ASYNC222",
  "ASYNC230",
  "ASYNC251",
  "B002",
  "B005",
  "B007",
  "B014",
  "B015",
  "B017",
  "B018",
  "B023",
  "B026",
  "B032",
  "B904",
  "B905",
  "C",
  "COM818",
  "D",
  "DTZ003",
  "DTZ004",
  "E",
  "F",
  "F541",
  "FLY",
  "FURB",
  "G",
  "I",
  "INP",
  "ISC",
  "ICN001",
  "N",
  "NPY",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF001",
  "SLOT",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
]
ignore = [
  "ANN101",
  "ANN102",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D200",
  "D203",
  "D205",
  "D212",
  "D213",
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  "D415",
  "E501",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "S101",
  "S104",
  "S106",
  "S107",
  "S311",
  "TRY003",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["app"]
split-on-trailing-comma = true

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 10
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SLF001"]
"examples/*" = ["T20"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true

# Correct way to ignore/type-relax for patterns in mypy (instead of [tool.mypy-tests.*])
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

